base.core/src/main/java/eapli/base/antlr/linguagemScripts/AutomatedScriptParser.java
// Generated from C:/Users/Rafael/Desktop/LEI - ISEP/2Ano 2Semestre/LAPR4/lei20_21_s4_2di_02/base.core/src/main/java/eapli/base/antlr/linguagemScripts\AutomatedScript.g4 by ANTLR 4.9.1
package eapli.base.antlr.linguagemScripts;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AutomatedScriptParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, NUM=3, PERCENTAGEM=4, SOMA_SUB=5, MUL_DIV=6, BARRA=7, 
		SCRIPT=8, AND=9, OR=10, IGUAL=11, EMAIL=12, OPERADOR_COMPARAR=13, IF=14, 
		WORD=15, VIRGULA=16, DOLLAR=17, ASPAS=18, CHAVETA_ENTRADA=19, CHAVETA_FECHAR=20, 
		PARENTESE_CURVO_ABRIR=21, PARENTESE_CURVO_FECHAR=22, PONTO_VIRGULA=23, 
		XML=24, FILE_PATH=25, WS=26, ERR_CHAR=27;
	public static final int
		RULE_start = 0, RULE_script = 1, RULE_instrucao_script = 2, RULE_instrucoes_condicao = 3, 
		RULE_cond_verificacoes = 4, RULE_cond_verificacao = 5, RULE_operacao_bool = 6, 
		RULE_funcao = 7, RULE_send_email = 8, RULE_read_file = 9, RULE_string = 10, 
		RULE_content = 11, RULE_output = 12, RULE_decimal = 13, RULE_objeto = 14, 
		RULE_percentagem_num = 15, RULE_nome_ficheiro = 16, RULE_atribuir_variavel = 17, 
		RULE_variavel = 18, RULE_nome_variavel = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "script", "instrucao_script", "instrucoes_condicao", "cond_verificacoes", 
			"cond_verificacao", "operacao_bool", "funcao", "send_email", "read_file", 
			"string", "content", "output", "decimal", "objeto", "percentagem_num", 
			"nome_ficheiro", "atribuir_variavel", "variavel", "nome_variavel"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'sendEmail'", "'readFile'", null, "'%'", null, null, "'/'", "'SCRIPT'", 
			"'AND'", "'OR'", "'='", null, null, "'if'", null, "','", "'$'", "'\"'", 
			"'{'", "'}'", "'('", "')'", "';'", "'.xml'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, "NUM", "PERCENTAGEM", "SOMA_SUB", "MUL_DIV", "BARRA", 
			"SCRIPT", "AND", "OR", "IGUAL", "EMAIL", "OPERADOR_COMPARAR", "IF", "WORD", 
			"VIRGULA", "DOLLAR", "ASPAS", "CHAVETA_ENTRADA", "CHAVETA_FECHAR", "PARENTESE_CURVO_ABRIR", 
			"PARENTESE_CURVO_FECHAR", "PONTO_VIRGULA", "XML", "FILE_PATH", "WS", 
			"ERR_CHAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AutomatedScript.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AutomatedScriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public TerminalNode SCRIPT() { return getToken(AutomatedScriptParser.SCRIPT, 0); }
		public TerminalNode CHAVETA_ENTRADA() { return getToken(AutomatedScriptParser.CHAVETA_ENTRADA, 0); }
		public ScriptContext script() {
			return getRuleContext(ScriptContext.class,0);
		}
		public TerminalNode CHAVETA_FECHAR() { return getToken(AutomatedScriptParser.CHAVETA_FECHAR, 0); }
		public TerminalNode EOF() { return getToken(AutomatedScriptParser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomatedScriptListener ) ((AutomatedScriptListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomatedScriptListener ) ((AutomatedScriptListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomatedScriptVisitor ) return ((AutomatedScriptVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			setState(46);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SCRIPT:
				enterOuterAlt(_localctx, 1);
				{
				setState(40);
				match(SCRIPT);
				setState(41);
				match(CHAVETA_ENTRADA);
				setState(42);
				script(0);
				setState(43);
				match(CHAVETA_FECHAR);
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 2);
				{
				setState(45);
				match(EOF);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScriptContext extends ParserRuleContext {
		public ScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_script; }
	 
		public ScriptContext() { }
		public void copyFrom(ScriptContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ResetExecucaoContext extends ScriptContext {
		public Instrucao_scriptContext instrucao_script() {
			return getRuleContext(Instrucao_scriptContext.class,0);
		}
		public ScriptContext script() {
			return getRuleContext(ScriptContext.class,0);
		}
		public ResetExecucaoContext(ScriptContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomatedScriptListener ) ((AutomatedScriptListener)listener).enterResetExecucao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomatedScriptListener ) ((AutomatedScriptListener)listener).exitResetExecucao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomatedScriptVisitor ) return ((AutomatedScriptVisitor<? extends T>)visitor).visitResetExecucao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScriptContext script() throws RecognitionException {
		return script(0);
	}

	private ScriptContext script(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ScriptContext _localctx = new ScriptContext(_ctx, _parentState);
		ScriptContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_script, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new ResetExecucaoContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			setState(49);
			instrucao_script();
			}
			_ctx.stop = _input.LT(-1);
			setState(55);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ResetExecucaoContext(new ScriptContext(_parentctx, _parentState));
					pushNewRecursionContext(_localctx, _startState, RULE_script);
					setState(51);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(52);
					instrucao_script();
					}
					} 
				}
				setState(57);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Instrucao_scriptContext extends ParserRuleContext {
		public Instrucao_scriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instrucao_script; }
	 
		public Instrucao_scriptContext() { }
		public void copyFrom(Instrucao_scriptContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Instrucao_condicaoContext extends Instrucao_scriptContext {
		public Instrucoes_condicaoContext instrucoes_condicao() {
			return getRuleContext(Instrucoes_condicaoContext.class,0);
		}
		public Instrucao_condicaoContext(Instrucao_scriptContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomatedScriptListener ) ((AutomatedScriptListener)listener).enterInstrucao_condicao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomatedScriptListener ) ((AutomatedScriptListener)listener).exitInstrucao_condicao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomatedScriptVisitor ) return ((AutomatedScriptVisitor<? extends T>)visitor).visitInstrucao_condicao(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Atribuir_variavel_ruleContext extends Instrucao_scriptContext {
		public Atribuir_variavelContext atribuir_variavel() {
			return getRuleContext(Atribuir_variavelContext.class,0);
		}
		public TerminalNode PONTO_VIRGULA() { return getToken(AutomatedScriptParser.PONTO_VIRGULA, 0); }
		public Atribuir_variavel_ruleContext(Instrucao_scriptContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomatedScriptListener ) ((AutomatedScriptListener)listener).enterAtribuir_variavel_rule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomatedScriptListener ) ((AutomatedScriptListener)listener).exitAtribuir_variavel_rule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomatedScriptVisitor ) return ((AutomatedScriptVisitor<? extends T>)visitor).visitAtribuir_variavel_rule(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Missing_ponto_virgulaContext extends Instrucao_scriptContext {
		public FuncaoContext funcao() {
			return getRuleContext(FuncaoContext.class,0);
		}
		public Atribuir_variavelContext atribuir_variavel() {
			return getRuleContext(Atribuir_variavelContext.class,0);
		}
		public Missing_ponto_virgulaContext(Instrucao_scriptContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomatedScriptListener ) ((AutomatedScriptListener)listener).enterMissing_ponto_virgula(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomatedScriptListener ) ((AutomatedScriptListener)listener).exitMissing_ponto_virgula(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomatedScriptVisitor ) return ((AutomatedScriptVisitor<? extends T>)visitor).visitMissing_ponto_virgula(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Do_funcaoContext extends Instrucao_scriptContext {
		public FuncaoContext funcao() {
			return getRuleContext(FuncaoContext.class,0);
		}
		public TerminalNode PONTO_VIRGULA() { return getToken(AutomatedScriptParser.PONTO_VIRGULA, 0); }
		public Do_funcaoContext(Instrucao_scriptContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomatedScriptListener ) ((AutomatedScriptListener)listener).enterDo_funcao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomatedScriptListener ) ((AutomatedScriptListener)listener).exitDo_funcao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomatedScriptVisitor ) return ((AutomatedScriptVisitor<? extends T>)visitor).visitDo_funcao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Instrucao_scriptContext instrucao_script() throws RecognitionException {
		Instrucao_scriptContext _localctx = new Instrucao_scriptContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_instrucao_script);
		try {
			setState(67);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new Instrucao_condicaoContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(58);
				instrucoes_condicao();
				}
				break;
			case 2:
				_localctx = new Do_funcaoContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(59);
				funcao();
				setState(60);
				match(PONTO_VIRGULA);
				}
				break;
			case 3:
				_localctx = new Atribuir_variavel_ruleContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(62);
				atribuir_variavel();
				setState(63);
				match(PONTO_VIRGULA);
				}
				break;
			case 4:
				_localctx = new Missing_ponto_virgulaContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(65);
				funcao();
				}
				break;
			case 5:
				_localctx = new Missing_ponto_virgulaContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(66);
				atribuir_variavel();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Instrucoes_condicaoContext extends ParserRuleContext {
		public Instrucoes_condicaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instrucoes_condicao; }
	 
		public Instrucoes_condicaoContext() { }
		public void copyFrom(Instrucoes_condicaoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CondicaoIfContext extends Instrucoes_condicaoContext {
		public Cond_verificacoesContext cond;
		public ScriptContext condicoes;
		public TerminalNode IF() { return getToken(AutomatedScriptParser.IF, 0); }
		public TerminalNode CHAVETA_ENTRADA() { return getToken(AutomatedScriptParser.CHAVETA_ENTRADA, 0); }
		public TerminalNode CHAVETA_FECHAR() { return getToken(AutomatedScriptParser.CHAVETA_FECHAR, 0); }
		public Cond_verificacoesContext cond_verificacoes() {
			return getRuleContext(Cond_verificacoesContext.class,0);
		}
		public ScriptContext script() {
			return getRuleContext(ScriptContext.class,0);
		}
		public CondicaoIfContext(Instrucoes_condicaoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomatedScriptListener ) ((AutomatedScriptListener)listener).enterCondicaoIf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomatedScriptListener ) ((AutomatedScriptListener)listener).exitCondicaoIf(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomatedScriptVisitor ) return ((AutomatedScriptVisitor<? extends T>)visitor).visitCondicaoIf(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Instrucoes_condicaoContext instrucoes_condicao() throws RecognitionException {
		Instrucoes_condicaoContext _localctx = new Instrucoes_condicaoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_instrucoes_condicao);
		try {
			_localctx = new CondicaoIfContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(IF);
			setState(70);
			((CondicaoIfContext)_localctx).cond = cond_verificacoes();
			setState(71);
			match(CHAVETA_ENTRADA);
			setState(72);
			((CondicaoIfContext)_localctx).condicoes = script(0);
			setState(73);
			match(CHAVETA_FECHAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Cond_verificacoesContext extends ParserRuleContext {
		public Cond_verificacoesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cond_verificacoes; }
	 
		public Cond_verificacoesContext() { }
		public void copyFrom(Cond_verificacoesContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class VerificarCondicaoIfContext extends Cond_verificacoesContext {
		public Cond_verificacaoContext cond;
		public TerminalNode PARENTESE_CURVO_ABRIR() { return getToken(AutomatedScriptParser.PARENTESE_CURVO_ABRIR, 0); }
		public TerminalNode PARENTESE_CURVO_FECHAR() { return getToken(AutomatedScriptParser.PARENTESE_CURVO_FECHAR, 0); }
		public Cond_verificacaoContext cond_verificacao() {
			return getRuleContext(Cond_verificacaoContext.class,0);
		}
		public VerificarCondicaoIfContext(Cond_verificacoesContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomatedScriptListener ) ((AutomatedScriptListener)listener).enterVerificarCondicaoIf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomatedScriptListener ) ((AutomatedScriptListener)listener).exitVerificarCondicaoIf(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomatedScriptVisitor ) return ((AutomatedScriptVisitor<? extends T>)visitor).visitVerificarCondicaoIf(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Cond_verificacoesContext cond_verificacoes() throws RecognitionException {
		Cond_verificacoesContext _localctx = new Cond_verificacoesContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_cond_verificacoes);
		try {
			_localctx = new VerificarCondicaoIfContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(PARENTESE_CURVO_ABRIR);
			setState(76);
			((VerificarCondicaoIfContext)_localctx).cond = cond_verificacao(0);
			setState(77);
			match(PARENTESE_CURVO_FECHAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Cond_verificacaoContext extends ParserRuleContext {
		public Cond_verificacaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cond_verificacao; }
	 
		public Cond_verificacaoContext() { }
		public void copyFrom(Cond_verificacaoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class OperacaoBooleanContext extends Cond_verificacaoContext {
		public Operacao_boolContext bool;
		public Operacao_boolContext operacao_bool() {
			return getRuleContext(Operacao_boolContext.class,0);
		}
		public OperacaoBooleanContext(Cond_verificacaoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomatedScriptListener ) ((AutomatedScriptListener)listener).enterOperacaoBoolean(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomatedScriptListener ) ((AutomatedScriptListener)listener).exitOperacaoBoolean(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomatedScriptVisitor ) return ((AutomatedScriptVisitor<? extends T>)visitor).visitOperacaoBoolean(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class OrConditionContext extends Cond_verificacaoContext {
		public Cond_verificacaoContext left;
		public Cond_verificacaoContext right;
		public TerminalNode OR() { return getToken(AutomatedScriptParser.OR, 0); }
		public List<Cond_verificacaoContext> cond_verificacao() {
			return getRuleContexts(Cond_verificacaoContext.class);
		}
		public Cond_verificacaoContext cond_verificacao(int i) {
			return getRuleContext(Cond_verificacaoContext.class,i);
		}
		public OrConditionContext(Cond_verificacaoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomatedScriptListener ) ((AutomatedScriptListener)listener).enterOrCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomatedScriptListener ) ((AutomatedScriptListener)listener).exitOrCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomatedScriptVisitor ) return ((AutomatedScriptVisitor<? extends T>)visitor).visitOrCondition(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PrioridadeContext extends Cond_verificacaoContext {
		public Cond_verificacaoContext cond;
		public TerminalNode PARENTESE_CURVO_ABRIR() { return getToken(AutomatedScriptParser.PARENTESE_CURVO_ABRIR, 0); }
		public TerminalNode PARENTESE_CURVO_FECHAR() { return getToken(AutomatedScriptParser.PARENTESE_CURVO_FECHAR, 0); }
		public Cond_verificacaoContext cond_verificacao() {
			return getRuleContext(Cond_verificacaoContext.class,0);
		}
		public PrioridadeContext(Cond_verificacaoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomatedScriptListener ) ((AutomatedScriptListener)listener).enterPrioridade(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomatedScriptListener ) ((AutomatedScriptListener)listener).exitPrioridade(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomatedScriptVisitor ) return ((AutomatedScriptVisitor<? extends T>)visitor).visitPrioridade(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AndConditionContext extends Cond_verificacaoContext {
		public Cond_verificacaoContext left;
		public Cond_verificacaoContext right;
		public TerminalNode AND() { return getToken(AutomatedScriptParser.AND, 0); }
		public List<Cond_verificacaoContext> cond_verificacao() {
			return getRuleContexts(Cond_verificacaoContext.class);
		}
		public Cond_verificacaoContext cond_verificacao(int i) {
			return getRuleContext(Cond_verificacaoContext.class,i);
		}
		public AndConditionContext(Cond_verificacaoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomatedScriptListener ) ((AutomatedScriptListener)listener).enterAndCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomatedScriptListener ) ((AutomatedScriptListener)listener).exitAndCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomatedScriptVisitor ) return ((AutomatedScriptVisitor<? extends T>)visitor).visitAndCondition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Cond_verificacaoContext cond_verificacao() throws RecognitionException {
		return cond_verificacao(0);
	}

	private Cond_verificacaoContext cond_verificacao(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Cond_verificacaoContext _localctx = new Cond_verificacaoContext(_ctx, _parentState);
		Cond_verificacaoContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_cond_verificacao, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				_localctx = new PrioridadeContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
